# findr-R

./: README  UPDATES
findr/: DESCRIPTION  NAMESPACE
findr/R/: auto.R  data.R  findr.R  zzz.R
findr/man/: findr-package.Rd  findr.lib.Rd  findr.netr_one_greedy.Rd  findr.pij_cassist.Rd  findr.pij_gassist.Rd  findr.pij_gassist_a.Rd  findr.pij_rank.Rd  findr.pij_rank_a.Rd  findr.pij_rank_pv.Rd  findr.pijs_cassist.Rd  findr.pijs_cassist_pv.Rd  findr.pijs_gassist.Rd  findr.pijs_gassist_a.Rd  findr.pijs_gassist_pv.Rd  geuvadis.Rd
findr/src/: Makefile  Makefile.auto
findr/src/gsl/: Makefile.am  Makefile.in  configure  configure.ac
findr/src/gsl/blas/: Makefile.in
findr/src/gsl/block/: Makefile.in
findr/src/gsl/cblas/: Makefile.am  Makefile.in
findr/src/gsl/cdf/: Makefile.in
findr/src/gsl/complex/: Makefile.in
findr/src/gsl/const/: Makefile.in
findr/src/gsl/eigen/: Makefile.in
findr/src/gsl/err/: Makefile.in
findr/src/gsl/gsl/: Makefile.in
findr/src/gsl/histogram/: Makefile.in
findr/src/gsl/ieee-utils/: Makefile.in
findr/src/gsl/linalg/: Makefile.in
findr/src/gsl/matrix/: Makefile.in
findr/src/gsl/permutation/: Makefile.in
findr/src/gsl/poly/: Makefile.in
findr/src/gsl/randist/: Makefile.in
findr/src/gsl/rng/: Makefile.in
findr/src/gsl/sort/: Makefile.in
findr/src/gsl/specfunc/: Makefile.in
findr/src/gsl/statistics/: Makefile.in
findr/src/gsl/sum/: Makefile.in
findr/src/gsl/sys/: Makefile.in
findr/src/gsl/test/: Makefile.in
findr/src/gsl/utils/: Makefile.in
findr/src/gsl/vector/: Makefile.in
findr/src/lib/: COPYRIGHT  Makefile
findr/src/lib/base/: config.h  const.h  data_process.c  data_process.h  data_struct.h  data_struct_heap.c  data_struct_heap.h  data_struct_ll.c  data_struct_ll.h  general_alg.h  histogram.c  histogram.h  lib.c  lib.h  logger.c  logger.h  macros.h  math.c  math.h  os.h  random.c  random.h  supernormalize.c  supernormalize.h  threading.h  types.h
findr/src/lib/base/gsl/: blas.h  cdf.h  errno.h  histogram.h  math.h  matrix.h  permutation.h  randist.h  rng.h  sf.h  sort.h  statistics.h  vector.h
findr/src/lib/cycle/: cycle.h  vg.c  vg.h
findr/src/lib/netr/: one.c  one.h
findr/src/lib/pij/: llrtopij.c  llrtopij.h  llrtopv.c  llrtopv.h  nulldist.c  nulldist.h  nullhist.c  nullhist.h  rank.c  rank.h
findr/src/lib/pij/cassist/: cassist.c  cassist.h  llr.c  llr.h  llrtopij.c  llrtopij.h  llrtopv.h
findr/src/lib/pij/gassist/: gassist.c  gassist.h  llr.c  llr.h  llrtopij.c  llrtopij.h  llrtopv.c  llrtopv.h  nullhist.c  nullhist.h
